# midwest_heritage

./: .gitignore  Midwest Heritage.lnk  README.md  init_environment.bat  main.py  pyproject.toml  requirements.txt  setup.py  thumbnail.html
archive/: psql_commands.txt
archive/examples/: connect_to_db_gfg_example.py
archive/working/: __init__.py  convert_price_list.py  postgre_sql_ingestion_readme_pseudocode.md  price_list_injestor.py
midwest_heritage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
midwest_heritage/examples/: database.ini
midwest_heritage/inputs/: price_list_schema.sql  schema.sql
midwest_heritage/utils/: sql_manager.py
midwest_heritage/working/: convert_price_list-DESKTOP-MVR2B00.py  convert_price_list_gpt_example.py  parse_headers.py  price_list_injestor.py  sql_server_example.py  temp.py  upload_schema.py
src/mwh/: upload_schema.py
src/mwh/dbt_mwh/models/price_list/: latest_prices.sql  price_list.sql
src/mwh/extract/: ELT_postgres_price_list.py  ELT_snowflake_price_list.py  parse_headers.py  price_list_injestor_postgres.py  price_list_injestor_snowflake.py  price_list_injestor_snowflake_dev.py
src/mwh/sql/postgres/: price_list_schema.sql
src/mwh/sql/snowflake/: price_list_merge.sql  price_list_schema.sql  price_list_upsert.sql
src/mwh/utils/: sql_manager.py  utils.py
